# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

noinst_HEADERS = \
	doxyconfig

# version
# $Id: Makefile.am,v 1.2 2005/10/12 19:23:37 brad Exp $

# End of file 
