# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = 

if ENABLE_SPATIAL
  SUBDIRS += cencalvmdb
endif

# version
# $Id: Makefile.am,v 1.1 2005/10/25 15:46:15 brad Exp $

# End of file 
