# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = \
	lib

#if ENABLE_TESTING
#  SUBDIRS += tests
#endif

# version
# $Id: Makefile.am,v 1.1 2005/10/25 15:46:15 brad Exp $

# End of file 
